k8s/blueprints/listmonk/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: listmonk
spec:
  replicas: 1
  serviceName: listmonk
  template:
    spec:
      containers:
        - command:
            - ./listmonk
            - "--idempotent"
          image: listmonk/listmonk
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          name: listmonk
          ports:
            - containerPort: 9000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          volumeMounts:
            - mountPath: /listmonk/uploads
              name: uploads
            - mountPath: /listmonk/config.toml
              name: listmonk-config
              subPath: config.toml
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: []
        sysctls: []
      volumes:
        - emptyDir: {}
          name: tmp
        - configMap:
            defaultMode: 0400
            name: listmonk-config
            optional: false
          name: listmonk-config
  volumeClaimTemplates:
    - metadata:
        name: uploads
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: hcloud-volumes-encrypted
