k8s/blueprints/listmonk/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: listmonk
spec:
  endpointSelector:
    matchLabels:
      app: service
  ingress:
    - toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
          rules:
            http: [{}]
      fromEntities:
        - all
